Revert "git set up"
This reverts commit 780dfe64fdba89a1322857df3f4568e485735966.

--- a/Frontend/assets/scss/style.scss
+++ b/Frontend/assets/scss/style.scss
@@ -1,17 +1,17 @@
 // base
-@import "./base/colors";
-@import "./base/fonts";
-@import "./base/layout";
+// @import "./base/colors";
+// @import "./base/fonts";
+// @import "./base/layout";
 @import "./base/breakpoints";
-@import "./base/reset";
-@import "./base/base";
-@import "./base/dev";
-// @import "./base/backup";
+// @import "./base/reset";
+// @import "./base/base";
+// @import "./base/dev";
+@import "./base/backup";
 
 // atoms
 
 // molecule
 
 // organisms
-@import "./organisms/header";
+
 // pages
