--- a/Frontend/assets/scss/style.scss
+++ b/Frontend/assets/scss/style.scss
@@ -4,7 +4,7 @@
 // @import "./base/layout";
 @import "./base/breakpoints";
 // @import "./base/reset";
-// @import "./base/base";
+@import "./base/base";
 // @import "./base/dev";
 @import "./base/backup";
 
@@ -14,4 +14,5 @@
 
 // organisms
 @import "./organisms/header";
+@import "./organisms/footer";
 // pages
