--- a/Frontend/assets/scss/base/_base.scss
+++ b/Frontend/assets/scss/base/_base.scss
@@ -13,7 +13,7 @@ html {
 
 html,
 body {
-  font-family: "Poppins", sans-serif;
+  // font-family: "Poppins", sans-serif;
   // font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
   //   Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
   //   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
