--- a/Frontend/assets/scss/style.scss
+++ b/Frontend/assets/scss/style.scss
@@ -1,7 +1,7 @@
 // base
 // @import "./base/colors";
 // @import "./base/fonts";
-// @import "./base/layout";
+// \@import "./base/layout";
 @import "./base/breakpoints";
 // @import "./base/reset";
 @import "./base/base";
@@ -9,10 +9,15 @@
 @import "./base/backup";
 
 // atoms
-
+@import "./atoms/heading";
+@import "./atoms/buttons";
 // molecule
 
 // organisms
 @import "./organisms/header";
 @import "./organisms/footer";
+@import "./organisms/personalised-chocolate";
+@import "./organisms/common-box";
+@import "./organisms/inspirationBox";
+@import "./organisms/headerDesk";
 // pages
