--- a/Frontend/assets/scss/organisms/_headerDesk.scss
+++ b/Frontend/assets/scss/organisms/_headerDesk.scss
@@ -13,7 +13,7 @@
         right: -25px;
         top: 1px;
         width: 19px;
-        height: 12px;
+        height: 11px;
         background-repeat: no-repeat;
         background-size: 90%;
       }
@@ -23,6 +23,7 @@
           background: url('data:image/svg+xml,<svg width="19" height="11" viewBox="0 0 19 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.557 9.574L9.57399 1.591L1.59102 9.574" stroke="%23EBC373" stroke-width="2.25" stroke-linecap="round"/></svg>');
           background-repeat: no-repeat;
           background-size: 90%;
+          height: 11px;
         }
       }
     }
@@ -119,12 +120,10 @@
         display: block;
       }
       &:hover{
-        .cg-MainNav__Cat-drop{
-          &:hover{
-            color:#EBC373;
-            &::after{
-              background: url('data:image/svg+xml,<svg width="19" height="11" viewBox="0 0 19 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.557 9.574L9.57399 1.591L1.59102 9.574" stroke="%23EBC373" stroke-width="2.25" stroke-linecap="round"/></svg>');
-            }
+        a.cg-MainNav__Cat-drop{
+          &::after{
+            background: url('data:image/svg+xml,<svg width="19" height="11" viewBox="0 0 19 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.557 9.574L9.57399 1.591L1.59102 9.574" stroke="%23EBC373" stroke-width="2.25" stroke-linecap="round"/></svg>');
+            height: 11px;
           }
         }
       }
