--- a/Frontend/assets/scss/organisms/_headerDesk.scss
+++ b/Frontend/assets/scss/organisms/_headerDesk.scss
@@ -99,7 +99,7 @@
           font-size: 14px;
           font-weight: 600;
           color: #EBC373;
-          margin-bottom: 10px;
+          margin:0 0 10px;
         }
         &__items{
           &--bold{
