--- a/Frontend/assets/scss/style.scss
+++ b/Frontend/assets/scss/style.scss
@@ -15,6 +15,7 @@
 
 // organisms
 @import "./organisms/header";
+@import "./organisms/headertop";
 @import "./organisms/footer";
 @import "./organisms/personalised-chocolate";
 @import "./organisms/common-box";
