--- a/assets/scss/organisms/_header.scss
+++ b/assets/scss/organisms/_header.scss
@@ -41,6 +41,13 @@
       justify-content: space-between;
       li {
         margin: 0px;
+        padding: 0 8px;
+        &:first-child {
+          padding-left: 0;
+        }
+        &:last-child {
+          padding-right: 0;
+        }
         a {
           color: #fff;
           font-size: 14px;
