--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,4 +16,5 @@
 @import 'organisms/header';
 @import 'organisms/header-top';
 @import 'organisms/footer';
+@import 'organisms/header-mob';
 // pages
