--- a/assets/scss/organisms/_banner.scss
+++ b/assets/scss/organisms/_banner.scss
@@ -10,7 +10,7 @@
         .cd-bannertile {
             display: flex;
             flex-direction: column;
-            width: 80%;
+            width: 70%;
             margin-left: 80px;
         }
     }
@@ -69,6 +69,7 @@
             height: 400px;
             .cd-bannertile {
                 width: 90%;
+                margin-left: 0;
             }
         }
         .cd-bannertile__title {
