mobile menu added

--- a/Frontend/assets/scss/style.scss
+++ b/Frontend/assets/scss/style.scss
@@ -20,4 +20,5 @@
 @import "./organisms/common-box";
 @import "./organisms/inspirationBox";
 @import "./organisms/headerDesk";
+@import "./organisms/mobMenu";
 // pages
