--- a/Frontend/assets/scss/organisms/_mobMenu.scss
+++ b/Frontend/assets/scss/organisms/_mobMenu.scss
@@ -89,6 +89,7 @@
             font-weight: 600;
             margin-bottom: 10px;
             position: relative;
+            text-transform: uppercase;
         }
         &__additional{
             margin:0px;
