--- a/assets/scss/molecules/_banner-tile.scss
+++ b/assets/scss/molecules/_banner-tile.scss
@@ -80,7 +80,7 @@
         border: 1px solid #d5a23b;
         border-radius: 20px;
         text-align: center;
-        margin-bottom: 16px;
+        margin: 0 auto 16px auto;
         p {
             color: #fff;
             font-size: 15px;
