--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,10 +10,14 @@
 // atoms
 @import 'atoms/btn';
 @import 'atoms/headings';
+@import 'atoms/gradient-btn';
 // molecule
 @import 'molecules/test-card';
+@import 'molecules/banner-tile';
 // organisms
 @import 'organisms/header';
 @import 'organisms/header-top';
 @import 'organisms/footer';
+@import 'organisms/banner';
+@import 'organisms/mobMenu';
 // pages
