--- a/assets/scss/organisms/_mobMenu.scss
+++ b/assets/scss/organisms/_mobMenu.scss
@@ -72,7 +72,6 @@
         &__search{
             padding: 10px 20px 20px;
             display: flex;
-            width: 42px;
             img{
                 margin-right: 10px;
                 width: 30px;
@@ -149,7 +148,7 @@
             top: 159px;
             height: 100%;
             padding: 20px 40px;
-            overflow: hidden;
+            overflow: auto;
         }
         &__hasSubmenu {
             cursor: pointer;
